
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4263: Move tez local mode unit tests to a separate target (daijy)

PIG-4257: Fix several e2e tests on secure cluster (daijy)

PIG-4261: Skip shipping local resources in tez local mode (daijy)

PIG-4182: e2e tests Scripting_[1-12] fail on Windows (daijy)

PIG-4259: Fix few issues related to Union, CROSS and auto parallelism in Tez (rohini)

PIG-4250: Fix Security Risks found by Coverity (daijy)

PIG-4258: Fix several e2e tests on Windows (daijy)

PIG-4256: Fix StreamingPythonUDFs e2e test failure on Windows (daijy)

PIG-4166: Collected group drops last record when combined with merge join (bridiver via daijy)

PIG-2495: Using merge JOIN from a HBaseStorage produces an error (bridiver via daijy)

PIG-4235: Fix unit test failures on Windows (daijy)

PIG-4245: 1-1 edge vertices should use same jvm opts (rohini)

PIG-4252: Tez container reuse fail when using script udf (daijy)

PIG-4241: Auto local mode mistakenly converts large jobs to local mode when using with Hive tables (cheolsoo)

PIG-4184: UDF backward compatibility issue after POStatus.STATUS_NULL refactory (daijy)

PIG-4238: Property 'pig.job.converted.fetch' should be unset when fetch finishes (lbendig)

PIG-4151: Pig Cannot Write Empty Maps to HBase (daijy)

PIG-4181: Cannot launch tez e2e test on Windows (daijy)

PIG-2834: MultiStorage requires unused constructor argument (daijy)

PIG-4230: Documentation fix: first nested foreach example is incomplete (lbendig via daijy)

PIG-4199: Mapreduce ACLs should be translated to Tez ACLs (rohini)

PIG-4227: Streaming Python UDF handles bag outputs incorrectly (cheolsoo)
