@@ -101,6 +101,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-4298: Descending order-by is broken in some cases when key is bytearrays (cheolsoo)
+
 PIG-4263: Move tez local mode unit tests to a separate target (daijy)
 
 PIG-4257: Fix several e2e tests on secure cluster (daijy)
